carousel overflow fix (#3)

--- a/public/scss/pages/auth/_login.scss
+++ b/public/scss/pages/auth/_login.scss
@@ -102,6 +102,10 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+
+    .carousel-slider {
+      height: 100%;
+    }
   }
 
   &__cct {
